Fix not precise vertical resizing caused by padding reduction, properly resize post data element that only have 1 post part, fix featured image getting wrong height when opening image editor

--- a/styles/sass/partials/_drag-n-drop.scss
+++ b/styles/sass/partials/_drag-n-drop.scss
@@ -86,6 +86,9 @@
 .upfront-module-active:not(.upfront-module-editing) > .upfront-resize-handle-s:not(.active-menu-item) {
   display: block !important;
 }
+.upfront-module:not(.upfront-module-disabled-all) > .upfront-resize-handle-s {
+  z-index: 2999;
+}
 .upfront-module-spacer > .upfront-resize-handle-s {
   display: none !important;
 }
